--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,4 +82,70 @@ nav{
     text-decoration: overline;
     color: black;
 }
-/* nav end */
+
+/* main starts */
+main{
+    min-height: 80vh;
+}
+/* sidebar-container starts */
+.sidebar-container{
+    padding: var(--padding);
+    flex: 1;
+    height: calc(100vh - 20vh);
+    overflow-y: scroll;
+    position: sticky;
+    top: 50px;
+}
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-track{
+    background-color: #f1f1f1;
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(179,  179,179);
+}
+
+.main-container{
+    padding: var(--padding);
+    flex: 3;
+}
+/* footer starts */
+.footer{
+    padding: 1rem;
+    min-height: 10vh;
+    background-color: var(--primary-color);
+    color: white;
+    font-size: 1.1rem;
+}
+.footer__input{
+    border: none;
+    padding: var(--padding);
+    width: 20rem;
+}
+.btn__subscribe{
+    border: none;
+    padding: var(--padding);
+    margin-left: -5px;
+}
+/* footer ends */
+
+/* responsiveness starts */
+@media(max-width: 992px){
+    .flex-center,
+    .flex-space-around{
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem 0;
+    }
+}
+
+@media(max-width: 768px){
+
+}
+
+@media(max-width: 600px){
+
+}
+
+/* responsiveness ends */
